--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 	<title>Document</title>
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-14T4YHERBJ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M8VDDK1H8W"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-14T4YHERBJ');
+  gtag('config', 'G-M8VDDK1H8W');
 </script>
 <body>
 	<h1>Hello world!</h1>
