--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="yandex-verification" content="74a41fa12a8d5e35" />
 	<title>Document</title>
 </head>
 <!-- Google tag (gtag.js) -->
