--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="yandex-verification" content="74a41fa12a8d5e35" />
+	<meta name="google-site-verification" content="3sGV_9gEJdxXd5K9WDWgjIe2Huq068T8dpKSIkpGE4M" />
 	<title>Document</title>
 </head>
 <!-- Google tag (gtag.js) -->
