--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="yandex-verification" content="74a41fa12a8d5e35" />
 	<meta name="google-site-verification" content="3sGV_9gEJdxXd5K9WDWgjIe2Huq068T8dpKSIkpGE4M" />
-	<title>Document</title>
+	<link rel="icon" href="https://example.com/favicon.ico" type="image/x-icon">
+	<title>shopping-chn</title>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-M8VDDK1H8W"></script>
