--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
         <!-- Place favicon.ico in the root directory -->
-
+	    
+	<meta name="keywords" content="vegetables, shopping, fresh" />
+	    
 	<!-- CSS here -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/animate.min.css">
