--- a/index.html
+++ b/index.html
@@ -1366,6 +1366,7 @@
                     </div>
                 </div>
             </div>
+		<img src="https://static-maps.yandex.ru/1.x/?ll=37.620070,55.753630&size=450,450&z=13&l=map&pt=37.620070,55.753630,pmwtm1~37.64,55.76363,pmwtm99" alt="">
         </footer>
         <!-- footer-area-end -->
 
