--- a/index.html
+++ b/index.html
@@ -1368,9 +1368,9 @@
 		
             </div>
 		
-	<div>
-	<img src="https://static-maps.yandex.ru/1.x/?ll=37.620070,55.753630&size=450,450&z=13&l=map&pt=37.620070,55.753630,pmwtm1~37.64,55.76363,pmwtm99" alt="">
-	</div>
+	    <div>
+	        <img src="https://static-maps.yandex.ru/1.x/?ll=27.547153,53.893869&size=450,450&z=15&l=map&pt=27.547153,53.893869,pm2rdm88~27.548267,53.892373,pm2dgm87" alt="">
+	    </div>
         </footer>
         <!-- footer-area-end -->
 
