--- a/index.html
+++ b/index.html
@@ -1364,6 +1364,9 @@
                     </div>
                 </div>
             </div>
+			<div>
+				<img src="https://static-maps.yandex.ru/1.x/?ll=27.547153,53.893869&size=450,450&z=15&l=map&pt=27.547153,53.893869,pm2rdm88~27.548267,53.892373,pm2dgm87" alt="">
+			</div>
         </footer>
         <!-- footer-area-end -->
 
