--- a/index.html
+++ b/index.html
@@ -1326,25 +1326,7 @@
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-6">
                             <div class="footer-widget footer-box-widget mb-50">
-                                <div class="f-download-wrap">
-                                    <div class="fw-title">
-                                        <h5 class="title">Download App</h5>
-                                    </div>
-                                    <div class="download-btns">
-                                        <a href="index.html"><img src="img/icon/g_play.png" alt=""></a>
-                                        <a href="index.html"><img src="img/icon/app_store.png" alt=""></a>
-                                    </div>
-                                </div>
-                                <div class="f-newsletter">
-                                    <div class="fw-title">
-                                        <h5 class="title">Newsletter</h5>
-                                    </div>
-                                    <form action="#">
-                                        <input type="email" placeholder="Email Address">
-                                        <button><i class="flaticon-send"></i></button>
-                                    </form>
-                                    <p>Do Not Show Your Mail</p>
-                                </div>
+                               <img src="https://static-maps.yandex.ru/1.x/?ll=27.547153,53.893869&size=450,450&z=15&l=map&pt=27.547153,53.893869,pm2rdm88~27.548267,53.892373,pm2dgm87" alt="">
                             </div>
                         </div>
                     </div>
