--- a/index.html
+++ b/index.html
@@ -1335,7 +1335,10 @@
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="copyright-text">
-                                <p>Copyright &copy; 2021.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+                                <p>Copyright &copy; 2021.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/"></a></p>
+				https://xtx-12.herokuapp.com/index.html
+				https://guo-site.herokuapp.com/index.html
+				https://travelwebsite666.herokuapp.com/
                             </div>
                         </div>
                         <div class="col-md-6">
