--- a/index.html
+++ b/index.html
@@ -1336,9 +1336,7 @@
                         <div class="col-md-6">
                             <div class="copyright-text">
                                 <p>Copyright &copy; 2021.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/"></a></p>
-				https://xtx-12.herokuapp.com/index.html
-				https://guo-site.herokuapp.com/index.html
-				https://travelwebsite666.herokuapp.com/
+				welcom to our group:https://xtx-12.herokuapp.com/index.html, https://guo-site.herokuapp.com/index.html, https://travelwebsite666.herokuapp.com/
                             </div>
                         </div>
                         <div class="col-md-6">
