--- a/index.html
+++ b/index.html
@@ -1336,7 +1336,7 @@
                         <div class="col-md-6">
                             <div class="copyright-text">
                                 <p>Copyright &copy; 2021.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/"></a></p>
-				Welcom to our group:<a href='https://xtx-12.herokuapp.com/index.html'>Fresh</a>, <a href='https://guo-site.herokuapp.com/index.html'>Mooncake</a>, <a href='https://travelwebsite666.herokuapp.com/'>Travel</a>
+				Welcom to our group:<a href='https://xtx-12.herokuapp.com/index.html'>Fresh</a>, <a href='https://guo-site.herokuapp.com/index.html'>Mooncake</a>, <a href='https://travelwebsite666.herokuapp.com/'>Travel</a>, <a href='https://mytravel966.herokuapp.com/index.html'>YuzheTour</a>
                             </div>
                         </div>
                         <div class="col-md-6">
