--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="yandex-verification" content="74a41fa12a8d5e35" />
-	<meta name="google-site-verification" content="3sGV_9gEJdxXd5K9WDWgjIe2Huq068T8dpKSIkpGE4M" />
-	<link rel="icon" href="https://shopping-chn.herokuapp.com/index.html" type="image/x-icon">
+		<meta name="yandex-verification" content="74a41fa12a8d5e35" />
+		<meta name="google-site-verification" content="3sGV_9gEJdxXd5K9WDWgjIe2Huq068T8dpKSIkpGE4M" />
+		<link rel="icon" href="https://shopping-chn.herokuapp.com/index.html" type="image/x-icon">
 
-	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
         <!-- Place favicon.ico in the root directory -->
-	    
-	<meta name="keywords" content="vegetables, shopping, fresh" />
-	    
-	<!-- CSS here -->
+
+		<!-- CSS here -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/animate.min.css">
         <link rel="stylesheet" href="css/magnific-popup.css">
@@ -30,15 +28,15 @@
         <link rel="stylesheet" href="css/responsive.css">
     </head>
 	
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M8VDDK1H8W"></script>
-    <script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-M8VDDK1H8W"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
-	gtag('config', 'G-M8VDDK1H8W');
-    </script>
+	  gtag('config', 'G-M8VDDK1H8W');
+	</script>
 	
     <body>
 
@@ -83,6 +81,29 @@
                 </div>
             </div>
             <!-- header-message-end -->
+
+            <!--  Friendly Links -->
+            <div style="position:fixed;top:200px; height:265px;">
+                <a href="https://xtx-12.herokuapp.com/index.html">
+                    <img src="img/ad/zhoubo.jpg" alt="Food" width='200' height='200'>
+                </a>
+            </div>
+            <div style="position:fixed;top:400px; height:485px;">
+                <a href="https://xtx-12.herokuapp.com/index.html">
+                    <img src="img/ad/guoxiaojian.png" alt="Mooncake" width='200' height='100'>
+                </a>
+            </div>
+            <div style="position:fixed;top:200px; height:265px; right:0;">
+                <a href="https://travelwebsite666.herokuapp.com/">
+                    <img src="img/ad/roadtrip.jpg" alt="Roadtrip" width='200' height='200'>
+                </a>
+            </div>
+            <div style="position:fixed;top:400px; height:485px; right:0;">
+                <a href="https://mytravel966.herokuapp.com/index.html">
+                    <img src="img/ad/yuzhe.jpg" alt="yuzheTravel" width='200' height='100'>
+                </a>
+            </div>
+            <!--  Friendly Links end -->
 
             <!-- header-top-start -->
             <div class="header-top-wrap">
@@ -1325,7 +1346,7 @@
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-6">
-                            <img src="https://static-maps.yandex.ru/1.x/?ll=27.547153,53.893869&size=450,300&z=15&l=map&pt=27.547153,53.893869,pm2rdm88~27.548267,53.892373,pm2dgm87" alt="">
+                            <img src="https://static-maps.yandex.ru/1.x/?ll=27.547153,53.893869&size=450,450&z=15&l=map&pt=27.547153,53.893869,pm2rdm88~27.548267,53.892373,pm2dgm87" alt="">
                         </div>
                     </div>
                 </div>
@@ -1336,7 +1357,7 @@
                         <div class="col-md-6">
                             <div class="copyright-text">
                                 <p>Copyright &copy; 2021.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/"></a></p>
-				Welcom to our group:<a href='https://xtx-12.herokuapp.com/index.html'>Fresh</a>, <a href='https://guo-site.herokuapp.com/index.html'>Mooncake</a>, <a href='https://travelwebsite666.herokuapp.com/'>Travel</a>, <a href='https://mytravel966.herokuapp.com/index.html'>YuzheTour</a>
+                                Welcom to our group:<a href='https://xtx-12.herokuapp.com/index.html'>Food</a>, <a href='https://guo-site.herokuapp.com/index.html'>Mooncake</a>, <a href='https://travelwebsite666.herokuapp.com/'>Travel</a>, <a href='https://mytravel966.herokuapp.com/index.html'>YuzheTour</a>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -1346,7 +1367,6 @@
                         </div>
                     </div>
                 </div>
-		
             </div>
         </footer>
         <!-- footer-area-end -->
