--- a/about-us.html
+++ b/about-us.html
@@ -485,7 +485,7 @@
                                 <div class="ingredients-img">
                                     <img src="img/images/ingredients_img.jpg" alt="">
                                     <div class="active-years">
-                                        <h2 class="title">49+ <span>Years</span></h2>
+                                        <h2 class="title">100+ <span>Years</span></h2>
                                     </div>
                                 </div>
                             </div>
@@ -495,8 +495,12 @@
                                         <span class="sub-title">ingredients</span>
                                         <h2 class="title">Store Primarily Engaged in General Range</h2>
                                     </div>
-                                    <p>Kamin ipsum is simply dummy the prinng and tysetting industry. Lorem ipsum has been the industry's standard dummy everince
-                                    when unknown printer took galley.</p>
+                                    <p>Huayuan is a company that has been in business for over 100 years.
+                                        For over a century, we have been providing healthy vegetable production and
+                                        supply services that are widely trusted by people.
+                                        After nearly a century of development, our services have become more attentive,
+                                        efficient and professional. Our aim is to create a safer,
+                                        healthier and better life for people.</p>
                                     <div class="ingredients-fact">
                                         <ul>
                                             <li>
@@ -509,8 +513,8 @@
                                             <li>
                                                 <div class="icon"><img src="img/icon/ing_icon02.png" alt=""></div>
                                                 <div class="content">
-                                                    <h4>35k+</h4>
-                                                    <span>Active Volunteers</span>
+                                                    <h4>100+</h4>
+                                                    <span>Authority Certification</span>
                                                 </div>
                                             </li>
                                         </ul>
@@ -535,8 +539,7 @@
                             <div class="col-xl-7 col-lg-9">
                                 <div class="services-section-title text-center mb-55">
                                     <h2 class="title">What We Provide?</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                                    aliqua minim.</p>
+                                    <p>We provide the freshest, healthiest and most timely services needed for life.</p>
                                 </div>
                             </div>
                         </div>
@@ -546,8 +549,8 @@
                                     <a href="contact.html" class="services-link"></a>
                                     <div class="icon"><i class="flaticon-return"></i></div>
                                     <div class="content">
-                                        <h5>Easy Returns<span class="new">NEW</span></h5>
-                                        <p>Knowledge base that organized collection system</p>
+                                        <h5>Delivery Service<span class="new">NEW</span></h5>
+                                        <p>Same day delivery within the city.</p>
                                     </div>
                                 </div>
                             </div>
@@ -556,8 +559,8 @@
                                     <a href="contact.html" class="services-link"></a>
                                     <div class="icon"><i class="flaticon-delivery"></i></div>
                                     <div class="content">
-                                        <h5>Free Delivery</h5>
-                                        <p>Knowledge base that organized collection system</p>
+                                        <h5>Optional Services</h5>
+                                        <p>Product visualization throughout.</p>
                                     </div>
                                 </div>
                             </div>
@@ -566,8 +569,8 @@
                                     <a href="contact.html" class="services-link"></a>
                                     <div class="icon"><i class="flaticon-like-1"></i></div>
                                     <div class="content">
-                                        <h5>Daily Deals Discount</h5>
-                                        <p>Knowledge base that organized collection system</p>
+                                        <h5>Healthy Green</h5>
+                                        <p>Chemical-free organic food.</p>
                                     </div>
                                 </div>
                             </div>
@@ -576,8 +579,8 @@
                                     <a href="contact.html" class="services-link"></a>
                                     <div class="icon"><i class="flaticon-clutch-disc"></i></div>
                                     <div class="content">
-                                        <h5>Automation</h5>
-                                        <p>Knowledge base that organized collection system</p>
+                                        <h5>Nutrient rich</h5>
+                                        <p>National nutrition authority testing.</p>
                                     </div>
                                 </div>
                             </div>
@@ -586,8 +589,8 @@
                                     <a href="contact.html" class="services-link"></a>
                                     <div class="icon"><i class="flaticon-settings"></i></div>
                                     <div class="content">
-                                        <h5>Database Software<span class="new">NEW</span></h5>
-                                        <p>Knowledge base that organized collection system</p>
+                                        <h5>Allday service<span class="new">NEW</span></h5>
+                                        <p>24 hours at your service.</p>
                                     </div>
                                 </div>
                             </div>
@@ -596,8 +599,8 @@
                                     <a href="contact.html" class="services-link"></a>
                                     <div class="icon"><i class="flaticon-online-service"></i></div>
                                     <div class="content">
-                                        <h5>Articles</h5>
-                                        <p>Knowledge base that organized collection system</p>
+                                        <h5>Exclusive Customized</h5>
+                                        <p>Pick your own vegetable garden.</p>
                                     </div>
                                 </div>
                             </div>
@@ -644,8 +647,12 @@
                             <div class="col-xl-6 col-lg-7">
                                 <div class="online-support-content">
                                     <h2 class="title">Ganic Online Support</h2>
-                                    <p>Tamin ipsum is simply dummy the prinng and tysetting industry. Lorem ipsum has been the industry's standard dummy that everince prinng
-                                    when unknown printer took galley.</p>
+                                    <p>Huayuan is a company that has been in business for over 100 years.
+                                        For over a century, we have been providing healthy vegetable production and
+                                        supply services that are widely trusted by people.
+                                        After nearly a century of development, our services have become more attentive,
+                                        efficient and professional. Our aim is to create a safer,
+                                        healthier and better life for people.</p>
                                     <div class="support-info-wrap">
                                         <ul>
                                             <li>
@@ -783,7 +790,7 @@
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="copyright-text">
-                                <p>Copyright &copy; 2021.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+                                <p>Copyright &copy; 2021.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/"></a></p>
                             </div>
                         </div>
                         <div class="col-md-6">
