--- a/about-us.html
+++ b/about-us.html
@@ -647,12 +647,7 @@
                             <div class="col-xl-6 col-lg-7">
                                 <div class="online-support-content">
                                     <h2 class="title">Ganic Online Support</h2>
-                                    <p>Huayuan is a company that has been in business for over 100 years.
-                                        For over a century, we have been providing healthy vegetable production and
-                                        supply services that are widely trusted by people.
-                                        After nearly a century of development, our services have become more attentive,
-                                        efficient and professional. Our aim is to create a safer,
-                                        healthier and better life for people.</p>
+                                    <p>We are here for you 24/7.</p>
                                     <div class="support-info-wrap">
                                         <ul>
                                             <li>
